@@ -1,20 +1,19 @@
 \name{integral}
 \alias{integral}
+\alias{line_integral}
 \alias{cintegral}
 \title{
   Adaptive Numerical Integration
 }
 \description{
   Combines several approaches to adaptive numerical integration of functions
-  of one variable, and provides complex line integrals.
+  of one variable.
 }
 \usage{
 integral(fun, xmin, xmax,
             method = c("Kronrod","Richardson","Clenshaw","Simpson","Romberg"),
             vectorized = TRUE, arrayValued = FALSE, waypoints = NULL,
             reltol = 1e-8, abstol = 0, ...)
-
-cintegral(fun, waypoints, method = NULL, reltol = 1e-6, ...)
 }
 \arguments{
   \item{fun}{integrand, univariate (vectorized) function.}
@@ -22,7 +21,6 @@ cintegral(fun, waypoints, method = NULL, reltol = 1e-6, ...)
   \item{method}{integration procedure, see below.}
   \item{vectorized}{logical; is the integrand a vectorized function; not used.}
   \item{arrayValued}{logical; is the integrand array-valued.}
-  \item{waypoints}{complex integration: points on the integration curve.}
   \item{reltol}{relative tolerance.}
   \item{abstol}{absolute tolerance; not used.}
   \item{...}{additional parameters to be passed to the function.}
@@ -37,22 +35,13 @@ cintegral(fun, waypoints, method = NULL, reltol = 1e-6, ...)
     \item Simpson (adaptive Simpson)
     \item Romberg
   }
+  Recommended default method is Gauss-Kronrod.
   Most methods require that function \code{f} is vectorized.
 
   If the interval is infinite, \code{quadinf} will be called that accepts
   the same methods as well. If the function is array-valued, \code{quadv}
   is called that applies an adaptive Simpson procedure -- other methods are
   ignored.
-
-  If one of the endpoints is complex, or \code{waypoints} is not \code{NULL},
-  function \code{cintegral} for complex line integration is called which
-  accepts the same set of methods.
-
-  \code{cintegral} realizes complex line integration, in this case straight
-  lines between the waypoints. By passing discrete points densely along the
-  curve, arbitrary line integrals can be approximated.
-
-  Recommended default method is Gauss-Kronrod.
 }
 \value{
   Returns the integral, no error terms given.
@@ -112,22 +101,5 @@ log1 <- function(x) log(1+x)
 fun <- function(x) c(exp(x), log1(x))
 Q <- integral(fun, 0, 1, reltol = 1e-12, arrayValued = TRUE, method = "Simpson")
 abs(Q - c(exp(1)-1, log(4)-1))          # 2.220446e-16 4.607426e-15
-
-##  Complex integration examples
-points <- c(0, 1+1i, 1-1i, 0)           # direction mathematically negative
-f <- function(z) 1 / (2*z -1)
-I <- cintegral(f, points)
-abs(I - (0-pi*1i))                      # 3.788081e-13 ; residuum 2 pi 1i * 1/2
-
-f <- function(z) 1/z
-points <- c(-1i, 1, 1i, -1, -1i)
-I <- cintegral(f, points)               # along a rectangle around 0+0i
-abs(I - 2*pi*1i)                        #=> 0 ; residuum: 2 pi i * 1
-
-N <- 100
-x <- linspace(0, 2*pi, N)
-y <- cos(x) + sin(x)*1i
-J <- cintegral(f, waypoints = y)        # along a circle around 0+0i
-abs(I - J)                              #=> 2.230056e-17; same residuum
 }
 \keyword{ math }
